cmake_minimum_required(VERSION 3.14)
project(cppleetcode)

set(CMAKE_CXX_STANDARD 17)

add_subdirectory(481_magic_string)
add_subdirectory(784_letter_case_permutation)
# add_subdirectory(792-number-of-matching-subsequences)
add_subdirectory(809-expressive-words)
add_subdirectory(878-nth-magical-number)
add_subdirectory(1710_maximum_units_on_a_truck)
add_subdirectory(1758-minimum-changes-to-make-alternating-binary-string)
add_subdirectory(1769-minimum-number-of-operations-to-move-all-balls-to-each-box)